disabled the demo users creation

--- a/assets/config/explorer/engine.properties
+++ b/assets/config/explorer/engine.properties
@@ -1,12 +1,12 @@
 # demo data properties
-create.demo.users=true
+create.demo.users=false
 create.demo.definitions=false
 create.demo.models=false
 create.demo.reports=false
 
 # engine properties
 engine.schema.update=true
-engine.activate.jobexecutor=false
+engine.activate.jobexecutor=true
 engine.asyncexecutor.enabled=true
 engine.asyncexecutor.activate=true
 engine.history.level=full
